tests/toy/neg/001670_mutation.toylang
program a = { while a var a : bool do sleep; } .
